--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -1,14 +1,14 @@
 .ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut {
-  stroke: #374356; }
-
-.ct-series-a .ct-slice-pie, .ct-series-a .ct-area {
-  fill: #374356; }
-
-.ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
   stroke: #56757c; }
 
-.ct-series-b .ct-slice-pie, .ct-series-b .ct-area {
+.ct-series-a .ct-slice-pie, .ct-series-a .ct-area {
   fill: #56757c; }
+
+.ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
+  stroke: #ffe196; }
+
+.ct-series-b .ct-slice-pie, .ct-series-b .ct-area {
+  fill: #ffe196; }
 
 .ct-chart-line {
   padding-top: .5vw;
